# linuxplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_sample.json  vcpkg.json
app/: CMakeLists.txt
app/linuxplorer/: CMakeLists.txt  commands.cpp  commands.hpp  main.cpp
app/lxpsvc/: CMakeLists.txt  main.cpp  session.hpp  session_callbacks.cpp  session_cf_callbacks.cpp  session_event_handlers.cpp  session_loader.cpp  session_main.cpp  session_miscellaneous.cpp  session_watcher.cpp
app/lxpsvc/contexts/: execution_context.cpp  execution_context.hpp
app/lxpsvc/exceptions/: abnormal_systems.hpp
app/lxpsvc/helpers/: path_helper.cpp  path_helper.hpp
app/lxpsvc/models/: data_range.hpp
app/lxpsvc/models/operations/: io_operations.cpp  io_operations.hpp
app/lxpsvc/models/requests/: io_requests.hpp  local_requests.hpp  remote_requests.hpp  result_adapter.hpp
app/lxpsvc/old/: main.cpp
app/lxpsvc/services/: profile_runtime.hpp
app/lxpsvc/win32/: handle.hpp  ntfs.cpp  ntfs.hpp
app/lxpsvc/workers/: filesystem_watcher.cpp  filesystem_watcher.hpp  operation_executor.cpp  operation_executor.hpp  request_visitor.cpp
include/shell/: cloud_provider_callback.h  cloud_provider_callback.hpp  cloud_provider_exception.hpp  cloud_provider_session.h  cloud_provider_session.hpp  cloud_provider_session_token.hpp  shellfwd.hpp
include/shell/filesystem/: cloud_filter_placeholder.h  cloud_filter_placeholder.hpp  cloud_provider_registrar.h  cloud_provider_registrar.hpp  placeholder_info.hpp
include/shell/functional/: callback_operation_info.hpp  callback_parameters.hpp  cloud_provider_callback.hpp
include/shell/models/: chunked_callback_generator.hpp
include/ssh/: ssh_address.hpp  ssh_exception.hpp  ssh_session.hpp  sshfwd.hpp
include/ssh/auth/: ssh_knownhosts.hpp
include/ssh/internal/: ssh_library_resource_manager.hpp
include/ssh/sftp/: sftp_session.hpp  sftpstream.hpp
include/ssh/sftp/filesystem/: sftp_entity.hpp  sftp_manip.hpp
include/ssh/sftp/io/: sftpstream.hpp
include/util/charset/: case_insensitive_char_traits.hpp  multibyte_wide_compat_helper.hpp
include/util/config/: app_settings.hpp  config_exception.hpp  configfwd.hpp  credentials.hpp  profiles.hpp  startup_config.hpp
src/: CMakeLists.txt
src/shell/: CMakeLists.txt  cloud_provider_callback.cpp  cloud_provider_session.cpp
src/shell/filesystem/: cloud_filter_placeholder.cpp  cloud_provider_registrar.cpp  placeholder_info.cpp
src/shell/functional/: callback_operation_info.cpp  callback_parameters.cpp  cloud_provider_callback.cpp
src/ssh/: CMakeLists.txt  ssh_address.cpp  ssh_exception.cpp  ssh_session.cpp
src/ssh/auth/: ssh_knownhosts.cpp
src/ssh/internal/: ssh_library_resource_manager.cpp
src/ssh/sftp/: sftp_session.cpp  sftpstream.cpp
src/ssh/sftp/filesystem/: sftp_entity.cpp  sftp_manip.cpp
src/ssh/sftp/io/: sftpstream.cpp
src/util/: CMakeLists.txt
src/util/charset/: multibyte_wide_compat_helper.cpp
src/util/config/: app_settings.cpp  credentials.cpp  profiles.cpp  startup_config.cpp
test/: CMakeLists.txt  cftest.cpp  cftest_impl.cpp  cftest_impl.h  configtest.cpp  lxptest.cpp  sshtest.cpp
test/lxpsvc/: CMakeLists.txt  dummy_callbacks.hpp  watcher.cpp
