add_executable(${LINUXPLORER_APP_MAIN_NAME})
set(LINUXPLORER_APP_MAIN_DIR ${LINUXPLORER_APP_MAIN_NAME})
target_compile_definitions(${LINUXPLORER_APP_MAIN_NAME} 
	PRIVATE 
	NOMINMAX 
	WIN32_LEAN_AND_MEAN
	LINUXPLORER_VERSION=${PROJECT_VERSION}
	LINUXPLORER_APP_SERVICE_NAME=${LINUXPLORER_APP_SERVICE_NAME}
	LINUXPLORER_APP_SERVICE_TERMINATE_EVENT_NAME=${LINUXPLORER_APP_SERVICE_TERMINATE_EVENT_NAME}
	LINUXPLORER_CLOUD_PROVIDER_NAME=${LINUXPLORER_CLOUD_PROVIDER_NAME}
)
target_sources(${LINUXPLORER_APP_MAIN_NAME} PRIVATE
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_MAIN_NAME}/commands.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_MAIN_NAME}/main.cpp
)
target_link_libraries(
	${LINUXPLORER_APP_MAIN_NAME}
	linuxplorer::util::charset
	linuxplorer::util::config
	linuxplorer::ssh
	linuxplorer::shell
	Boost::program_options shlwapi
)
install(TARGETS ${LINUXPLORER_APP_MAIN_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
add_custom_command(TARGET ${LINUXPLORER_APP_MAIN_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
		$<TARGET_RUNTIME_DLLS:${LINUXPLORER_APP_MAIN_NAME}> $<TARGET_FILE_DIR:${LINUXPLORER_APP_MAIN_NAME}>
    COMMAND_EXPAND_LISTS
)