add_executable(${LINUXPLORER_APP_SERVICE_NAME} WIN32)
set(LINUXPLORER_APP_SERVICE_DIR ${LINUXPLORER_APP_SERVICE_NAME})
target_compile_definitions(${LINUXPLORER_APP_SERVICE_NAME} 
	PRIVATE 
	NOMINMAX 
	LINUXPLORER_VERSION=${PROJECT_VERSION}
	LINUXPLORER_APP_SERVICE_NAME=${LINUXPLORER_APP_SERVICE_NAME}
	LINUXPLORER_APP_SERVICE_TERMINATE_EVENT_NAME=${LINUXPLORER_APP_SERVICE_TERMINATE_EVENT_NAME}
	LINUXPLORER_CLOUD_PROVIDER_NAME=${LINUXPLORER_CLOUD_PROVIDER_NAME}
)
target_sources(${LINUXPLORER_APP_SERVICE_NAME} PRIVATE
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_DIR}/session_main.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_DIR}/session_cf_callbacks.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_DIR}/session_loader.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_DIR}/session_miscellaneous.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_DIR}/main.cpp
)
target_link_libraries(
	${LINUXPLORER_APP_SERVICE_NAME}
	linuxplorer::ssh
	linuxplorer::shell
	linuxplorer::util::charset
	linuxplorer::util::config
	quill::quill
	cldapi
	propsys
)
install(TARGETS ${LINUXPLORER_APP_SERVICE_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
add_custom_command(TARGET ${LINUXPLORER_APP_SERVICE_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
		$<TARGET_RUNTIME_DLLS:${LINUXPLORER_APP_SERVICE_NAME}> $<TARGET_FILE_DIR:${LINUXPLORER_APP_SERVICE_NAME}>
    COMMAND_EXPAND_LISTS
)