# add_executable(${LINUXPLORER_APP_SERVICE_NAME} WIN32)
add_library(${LINUXPLORER_APP_SERVICE_NAME} STATIC)
set(LINUXPLORER_APP_SERVICE_DIR ${LINUXPLORER_APP_SERVICE_NAME})
target_compile_definitions(${LINUXPLORER_APP_SERVICE_NAME} 
	PRIVATE 
	NOMINMAX
	WIN32_LEAN_AND_MEAN
	LINUXPLORER_VERSION=${PROJECT_VERSION}
	LINUXPLORER_APP_SERVICE_NAME=${LINUXPLORER_APP_SERVICE_NAME}
	LINUXPLORER_APP_SERVICE_TERMINATE_EVENT_NAME=${LINUXPLORER_APP_SERVICE_TERMINATE_EVENT_NAME}
	LINUXPLORER_CLOUD_PROVIDER_NAME=${LINUXPLORER_CLOUD_PROVIDER_NAME}
)
target_sources(${LINUXPLORER_APP_SERVICE_NAME} 
	PUBLIC
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/contexts/execution_context.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/exceptions/abnormal_systems.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/helpers/path_helper.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/models/data_range.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/models/operations/io_operations.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/models/requests/io_requests.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/win32/handle.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/win32/ntfs.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/workers/filesystem_watcher.hpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/workers/operation_executor.hpp
	PRIVATE
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/contexts/execution_context.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/helpers/path_helper.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/workers/filesystem_watcher.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/workers/operation_executor.cpp
	${LINUXPLORER_APP_DIR}/${LINUXPLORER_APP_SERVICE_NAME}/workers/request_visitor.cpp
)
target_link_libraries(
	${LINUXPLORER_APP_SERVICE_NAME}
	linuxplorer::ssh
	linuxplorer::shell
	linuxplorer::util::charset
	linuxplorer::util::config
	quill::quill
	cldapi
	propsys
	shlwapi
)
#install(TARGETS ${LINUXPLORER_APP_SERVICE_NAME}
#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
#)
#add_custom_command(TARGET ${LINUXPLORER_APP_SERVICE_NAME} POST_BUILD
#    COMMAND ${CMAKE_COMMAND} -E copy_if_different
#		$<TARGET_RUNTIME_DLLS:${LINUXPLORER_APP_SERVICE_NAME}> $<TARGET_FILE_DIR:${LINUXPLORER_APP_SERVICE_NAME}>
#    COMMAND_EXPAND_LISTS
#)